Update pytorch DNN model to the latest, include features

--- a/bucoffea/config/vbfhinv.yaml
+++ b/bucoffea/config/vbfhinv.yaml
@@ -143,16 +143,32 @@ default:
     convnet:
       path: models/model_2022-05-20_batch100_dropout0_25_regular
     deepnet:
-      path: models/pytorch/2022-06-12_dense
+      path: models/pytorch/2022-06-30_dense
       features:
         - mjj
-        - detajj
         - dphijj
+        - detajj
+        - mjj_maxmjj
+        - dphijj_maxmjj
+        - detajj_maxmjj
+        - recoil_pt
+        - dphi_ak40_met
+        - dphi_ak41_met
+        - ht
+        - leadak4_pt
+        - leadak4_eta
+        - trailak4_pt
+        - trailak4_eta
+        - leadak4_mjjmax_pt
+        - leadak4_mjjmax_eta
+        - trailak4_mjjmax_pt
+        - trailak4_mjjmax_eta
       arch_parameters:
-        n_features: 3
+        n_features: 18
         n_classes: 2
         n_nodes: [18,10,5,2]
         dropout: 0.2
+
 
   sf:
     qcd_ew_nlo_w: # QCD x EW k factor for QCD Z
