Save histograms for each DNN feature

--- a/bucoffea/config/vbfhinv.yaml
+++ b/bucoffea/config/vbfhinv.yaml
@@ -144,6 +144,7 @@ default:
       path: models/model_2022-05-20_batch100_dropout0_25_regular
     deepnet:
       path: models/pytorch/2022-06-30_dense
+      save_features: true
       features:
         - mjj
         - dphijj
