Reduce chunk size to save memory, do not run CNN or DNN unless specified

--- a/bucoffea/config/vbfhinv.yaml
+++ b/bucoffea/config/vbfhinv.yaml
@@ -137,6 +137,8 @@ default:
   mitigation:
     hem: True
   nn_models:
+    run:
+      - cnn_score
     uncertainties:
       - cnn_score
       - dnn_score
